# SDI_data_search_LLM

./: main.py  pyproject.toml
config/: config.py
data/: gdi_de_catalog.rdf  govdata_de_catalog.rdf
models/: dataset.py
parsers/: __init__.py  query_parser.py  rdf_parser.py
query parser/: query_parser.py
vector_stores/: __init__.py  qdrant_store.py
