[project]
name = "spatial-data-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "langchain-qdrant>=0.2.0",
    "pydantic>=2.11.7",
    "qdrant-client>=1.14.3",
    "rdflib>=7.1.4",
]
